// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon component default icon matches snapshot 1`] = `
<div>
  <i
    class="material-icons  css-eyhhi6"
  >
    accessibility
  </i>
</div>
`;

exports[`Icon component outlined icon matches snapshot 1`] = `
<div>
  <i
    class="material-icons-outlined  css-eyhhi6"
  >
    accessibility
  </i>
</div>
`;
